[package]
name = "ropap"
version = "0.1.0"
authors = ["Lilly H. St Claire"]
description = "An OpenGL pixel mapping engine"
readme = "README.md"
repository = "https://github.com/nonmasc-lilly/ropap"
keywords = ["graphics", "renderer", "OpenGL"]
categories = ["rendering", "graphics"]
exclude = ["config.gplgp"]
edition = "2021"
license-file = "LICENSE"

[badges]
maintenance = { status = "as-is" }

[dependencies]
glfw = "0.58.0"
gl33 = "0.2.1"
